# wadda-cpp

./: .clang-format  .gitignore  README.md
src/lidar_tools/: CMakeLists.txt  package.xml
src/lidar_tools/cfgs/: calib.yaml
src/lidar_tools/launch/: merge_pc.launch
src/lidar_tools/scripts/: README.md  calib.yaml  merge_pc.py  transform.py
src/lidar_tools/src/merge_pc/: main.cpp
