<?xml version="1.0"?>
<package format="2">
  <name>lidar_tools</name>
  <version>1.12.0</version>
  <description>lidar_tools</description>

  <maintainer email="windzu1@gmail.com">windzu</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>message_filters</depend>
  <depend>visualization_msgs</depend>

</package>
